@@ -1,3 +1,5 @@
+* Can now derive from GraphComponent in python and override acceptsParent and acceptsChild methods. These methods can also be overridden in other python-derivable classes such as Plug and Node.
+
 0.3.0
 -----
 
